test/ill-formed/unsupported/yield_expr.py
def gen():
    yield 1
    yield 2

print(list(gen()))
